objects/vlocity_cmt__MediaConfiguration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting for Media Products</description>
    <fields>
        <fullName>vlocity_cmt__Decimal_Value__c</fullName>
        <label>Decimal Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <description>Description of the feature/setting</description>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Setup_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to specify if setting is enabled/disabled</description>
        <label>Setup Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Text_Value__c</fullName>
        <description>Text Value</description>
        <label>Text Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Media Configuration</label>
</CustomObject>